intTests/test_type_errors/err036.saw
//
// Too many arguments for type: named type variables
//

typedef t = Int;

let x : t Int = 3;
